--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 #Gradle
 org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx2048M"
+org.gradle.warning.mode=all
 
 #Kotlin
 kotlin.code.style=official
