enhancement(iOS): updates MainScreen with standard ui

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,5 +9,6 @@ kotlin.code.style=official
 android.useAndroidX=true
 android.nonTransitiveRClass=true
 
-#MPP
+#KMP
 kotlin.mpp.enableCInteropCommonization=true
+kotlin.native.binary.memoryModel=experimental
