--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,8 @@ android.nonTransitiveRClass=true
 #KMP
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.native.binary.memoryModel=experimental
+
+# Versions
+ktor_version=2.0.3
+kotlin_version=1.7.10
+logback_version=1.2.3
