--- a/android/presentation/src/main/AndroidManifest.xml
+++ b/android/presentation/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mambo.poetree.android">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application>
 
         <activity
