feature(android): updates compose screen ui and adds functions for saving and updating

--- a/android/presentation/src/main/AndroidManifest.xml
+++ b/android/presentation/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <application>
 
         <activity
+                android:windowSoftInputMode="adjustResize"
                 android:name=".presentation.MainActivity"
                 android:exported="true"
                 android:label="Poetree"
